[project]
name = "microbitcoin-api"
version = "0.0.1"
description = "Microbitcoin API"
authors = ["volbil <volbilnexus@gmail.com>", "kuyugama <mail.kuyugama@gmail.com>"]
readme = "README.md"
requires-python=">=3.11"
dependencies = [
      "aiohttp>=3.12.13",
      "alembic>=1.16.1",
      "apscheduler>=3.11.0",
      "asyncpg>=0.30.0",
      "bcrypt>=4.3.0",
      "dynaconf>=3.2.11",
      "fastapi>=0.115.12",
      "puremagic>=1.29",
      "pydantic>=2.11.4",
      "sqlalchemy>=2.0.41",
      "uvicorn>=0.35.0",
]

[dependency-groups]
dev = [
    "async-asgi-testclient>=1.4.11",
    "pytest>=8.3.5",
    "pytest-asyncio==0.21.2",
    "pytest-postgresql==5.1.1",
]

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
python_functions = "test_*"
python_files = "test_*.py"
asyncio_mode = "auto"
testpaths = "tests"
pythonpath = ["."]

[tool.ruff]
line-length = 80
exclude = [".venv", "venv", "alembic"]
extend-ignore = [
    "F821",  # Disable checks for annotated SQLAlchemy relations 
]
  
[tool.pyright]
reportUninitializedInstanceVariable = false
reportUnannotatedClassAttribute = false
reportIgnoreCommentWithoutRule = false
reportCallInDefaultInitializer = false
reportMissingTypeArgument = false
enableTypeIgnoreComments = true
reportUnusedCallResult = false
reportImportCycles = false
reportExplicitAny = false
reportAny = false
